@@ -11,4 +11,3 @@
 </button>
 <ws-toast></ws-toast>
 <ws-loading-screen [label]="loadingLabel" style="z-index: 1000" *ngIf="screenLoading"></ws-loading-screen>
-<router-outlet name="modal"></router-outlet>
