@@ -19,10 +19,10 @@
         <div class="user-container">
             <div *ngIf="!user">
                 <a class="user-container__link" href="javascript:void(0)"
-                [routerLink]="['', {outlets: { modal: 'login'}}]" [queryParamsHandling]="'merge'">Login</a>
+                [routerLink]="[]" [queryParams]="{modal: 'login'}" [queryParamsHandling]="'merge'">Login</a>
                 <span class="user-container__text">|</span>
                 <a class="user-container__link" href="javacript:void(0)"
-                [routerLink]="['', {outlets: { modal: 'register'}}]">Sign-up</a>
+                [routerLink]="[]" [queryParams]="{modal: 'register'}" [queryParamsHandling]="'merge'">Sign-up</a>
             </div>
             <div *ngIf="user" class="btn-group" mdbDropdown>
                 <div mdbDropdownToggle class="user-container__profile-container dropdown-toggle">
