@@ -1,4 +1,4 @@
-import { Component, OnInit, HostListener, ViewEncapsulation, ViewChild, ElementRef } from '@angular/core';
+import { Component, OnInit, HostListener, ViewEncapsulation, ViewChild, ElementRef, ViewContainerRef, ComponentFactoryResolver } from '@angular/core';
 import * as _ from 'lodash';
 import { SharedUserService } from '@services/shared/shared-user.service';
 import { takeUntil } from 'rxjs/operators';
@@ -6,10 +6,11 @@ import { Subject } from 'rxjs';
 import { User } from '@objects/user';
 import { AuthenticationService } from '@services/http/general/authentication.service';
 import { AuthUserService } from '@services/http/general/auth-user.service';
-import { Router } from '@angular/router';
+import { Router, ActivatedRoute } from '@angular/router';
 import { SharedLoadingService } from '@services/shared/shared-loading.service';
 import { AuthFollowService } from '@services/http/auth/auth-follow.service';
 import { ScreenService } from '@services/general/screen.service';
+import { VisitorGuard } from 'src/app/guards/visitor.guard';
 
 @Component({
   selector: 'app-header',
@@ -29,6 +30,10 @@ export class HeaderComponent implements OnInit {
   constructor(private authUserService: AuthUserService,
     private sharedLoadingService: SharedLoadingService,
     private router: Router,
+    private visitorGuard: VisitorGuard,
+    private viewContainerRef: ViewContainerRef,
+    private cfr: ComponentFactoryResolver,
+    private route: ActivatedRoute,
     private screenService: ScreenService,
     private sharedUserService: SharedUserService,
     private authFollowService: AuthFollowService,
@@ -39,6 +44,7 @@ export class HeaderComponent implements OnInit {
       .subscribe(result => {
         this.user = result;
         if (result) {
+          this.getFollowPages();
           this.getFollowItems();
         }
       })
@@ -51,10 +57,70 @@ export class HeaderComponent implements OnInit {
     .subscribe(result => {
       this.isMobileSize = result;
     })
+
+    this.route.queryParams.pipe(takeUntil(this.ngUnsubscribe))
+    .subscribe(queryParams => {
+      let isModal = queryParams['modal'];
+      if (isModal && this.isAuthenticateUrl(isModal)) {
+        this.visitorGuard.canActivate().then(result => {
+          if (result) {
+            if (isModal == 'login') {
+              this.createLazyLoginComponent();
+            } else if (isModal == 'register') {
+              this.createLazyRegisterComponent();
+            } else if (isModal == 'forgot-password') {
+              this.createLazyForgotPasswordComponent();
+            } else if (isModal == 'activate') {
+              this.createLazyActivateComponent();
+            } else if (isModal == 'reset-password') {
+              this.createLazyResetPasswordComponent();
+            }
+          } else {
+            this.getUser();
+            this.router.navigate([], {queryParams: {modal: null}});
+          }
+        })
+      } else {
+        this.viewContainerRef.clear();
+      }
+    })
+  }
+  isAuthenticateUrl(url) {
+    return url =='login' || url == 'register' || url == 'forgot-password' || url == 'activate' || url == 'reset-password';
+  }
+
+  async createLazyLoginComponent() {
+    this.viewContainerRef.clear();
+    await import ('../../../modules/authentication/login/login.module');
+    const { LoginComponent } = await import('@components/feature/authentication/login/login.component');
+    this.viewContainerRef.createComponent(this.cfr.resolveComponentFactory(LoginComponent));
+  }
+  async createLazyRegisterComponent() {
+    this.viewContainerRef.clear();
+    await import('../../../modules/authentication/register/register.module');
+    const { RegisterComponent } = await import('@components/feature/authentication/register/register.component');
+    this.viewContainerRef.createComponent(this.cfr.resolveComponentFactory(RegisterComponent));
+  }
+  async createLazyForgotPasswordComponent() {
+    this.viewContainerRef.clear();
+    await import('../../../modules/authentication/forgot-password/forgot-password.module');
+    const { ForgotPasswordComponent } = await import('@components/feature/authentication/forgot-password/forgot-password.component');
+    this.viewContainerRef.createComponent(this.cfr.resolveComponentFactory(ForgotPasswordComponent));
+  }
+  async createLazyActivateComponent() {
+    this.viewContainerRef.clear();
+    await import('../../../modules/authentication/activate/activate.module');
+    const { ActivateComponent } = await import('@components/feature/authentication/activate/activate.component');
+    this.viewContainerRef.createComponent(this.cfr.resolveComponentFactory(ActivateComponent));
+  }
+  async createLazyResetPasswordComponent() {
+    this.viewContainerRef.clear();
+    await import('../../../modules/authentication/reset-password/reset-password.module');
+    const { ResetPasswordComponent } = await import('@components/feature/authentication/reset-password/reset-password.component');
+    this.viewContainerRef.createComponent(this.cfr.resolveComponentFactory(ResetPasswordComponent));
   }
 
   @HostListener('window:scroll', ['$event'])
-  
   onScrollDown(event) {
     if (!this.didScroll){
       this.didScroll = true;
@@ -78,6 +144,11 @@ export class HeaderComponent implements OnInit {
           this.sharedUserService.user.next(result.result);
         }
       })
+  }
+  getFollowPages() {
+    this.authFollowService.getFollowShopsIds().pipe(takeUntil(this.ngUnsubscribe)).subscribe(result => {
+      this.sharedUserService.followPages.next(result['result']);
+    })
   }
   getFollowItems() {
     this.authFollowService.getFollowItemsIds().pipe(takeUntil(this.ngUnsubscribe)).subscribe(result => {
