@@ -1,3 +1,32 @@
+#continueSpan {
+    &::before {
+        content: "" !important;
+        position: absolute !important;
+        top: 50% !important;
+        right: 100% !important;
+        width: 5000px !important;
+        border-bottom: 1px solid rgb(228, 228, 228) !important;
+    }
+    &::after {
+        content: "" !important;
+        position: absolute !important;
+        top: 50% !important;
+        left: 100% !important;
+        width: 5000px !important;
+        border-bottom: 1px solid rgb(228, 228, 228) !important;
+    }
+    .innerSpan {
+        font-weight: 300 !important;
+        word-wrap: break-word !important;
+        font-size: 14px !important;
+        line-height: 18px !important;
+        letter-spacing: normal !important;
+        font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+        color: rgb(118, 118, 118) !important;
+        display: inline !important;
+        margin: 0px !important;
+    }
+}
 .center{
     margin-left: auto;
     margin-right: auto;
